# trenddrop

./: .env  .env.example  README-postgresql.md  README.md  agent-workflow-test-report.md  db-push.sh  db-setup.js  init-db.sql  install-dependencies.sh  kill-port.sh  package-lock.json  package.json  pyproject.toml  replit.nix  setup.sh  start-pg.sh  start.sh  test-agent-workflow.js  test-enhanced-server.ts  test-enhanced-service.ts  test-pg-connection.js  test-script-package.json  theme.json  tsconfig.json
attached_assets/: Pasted--src-data-database-ts-import-inject-injectable-from-inversify-import-TYPES-from-c-1743570790925.txt  Pasted-5-12-10-PM-express-Re-broadcasting-agent-status-to-2-clients-5-12-15-PM-express-Re-broadcasting--1743527712482.txt  Pasted-5-46-31-PM-express-Received-client-connected-message-sending-agent-status-5-46-31-PM-express-Se-1743529631081.txt  Pasted-Analysis-of-the-TrendDrop-Application-Architecture-Let-me-first-analyze-the-current-application-arch-1743568344992.txt  Pasted-Optimizing-TrendDrop-Robust-Deployment-AI-Powered-Data-Collection-After-analyzing-your-TrendDrop--1743569739842.txt  Pasted-Project-Plan-Product-Research-Tool-for-Trending-Dropship-Products-Objective-Build-a-clean-intuit-1743418724026.txt  Pasted-Streamlining-the-TrendDrop-Architecture-Eliminating-Redundancy-After-analyzing-the-TrendDrop-codeba-1743570837787.txt  Pasted-TrendDrop-Dashboard-Implementation-Plan-Based-on-a-thorough-analysis-of-the-existing-TrendDrop-appl-1743568607884.txt  (+1 more)
client/: Readme.md  index.html
data/: trenddrop.db
scripts/: seed.ts
src/: index.ts  (+3 more)
(+154 files in other folders)
